feat: Upgrade nx to 19.5.6  (#29415) (#29457)
Update nx version to the latest and make it consistent. This should
resolve issues causing #29415 (Flakey build. coreweb yarn install Bus
Error core ).

See https://nx.dev/nx-api/angular/documents/angular-nx-version-matrix

https://nx.dev/nx-api/workspace/documents/nx-nodejs-typescript-version-matrix
https://v17.angular.io/guide/versions

https://nx.dev/changelog


The main issue seems to be related to @nx/linter19.5.1 being added and
it not matching the rest of the nx modules with 18.3.5. Also separately
@nxext/stencil did not have a matching version to nx at 17.2.2. 17.x
versions of @nxext/stencil pull in other nx dependencies and needs an
exact version match, nx 18.x.x needs @nxext/stencil@18.0.0 and nx 19.x.x
needs @nxext/stencil@19.0.0

The conflicting versions showed up with "yarn list", nx versions can be
upgraded with the "nx migrate" command.

I have upgraded to the latest nx here after reviewing documents and any
breaking changes, but if there are problems preventing the nx update we
can try changing the nx version back to 18.3.5 and use a matching
version of @nx/linter as well as @nxext/stencil@18.0.0 to match

--- a/core-web/package.json
+++ b/core-web/package.json
@@ -11,7 +11,7 @@
         "start": "ng serve",
         "build": "ng build",
         "test": "nx test",
-        "lint": "nx workspace-lint && ng lint",
+        "lint": "ng lint",
         "e2e": "ng e2e dotcms-ui-e2e --headless true --base-url http://localhost:8080",
         "e2e:open": "ng e2e dotcms-ui-e2e --watch --base-url http://localhost:8080",
         "publish:dev": "rm -rf dist;npm run build:prod;cp package.json ./dist/apps/dotcms-ui/package.json;cd dist/apps/dotcms-ui",
@@ -71,8 +71,7 @@
         "@ngrx/component-store": "17.0.1",
         "@ngrx/operators": "^17.2.0",
         "@ngrx/signals": "^17.2.0",
-        "@nrwl/linter": "^19.5.1",
-        "@nx/angular": "18.3.5",
+        "@nx/angular": "19.5.6",
         "@storybook/builder-webpack5": "^8.1.1",
         "@tarekraafat/autocomplete.js": "^10.2.6",
         "@tinymce/tinymce-angular": "^7.0.0",
@@ -150,22 +149,21 @@
         "@materia-ui/ngx-monaco-editor": "^6.0.0",
         "@mdx-js/react": "^2.1.2",
         "@ngneat/spectator": "^19.0.0",
-        "@nx/cypress": "18.3.5",
-        "@nx/devkit": "18.3.5",
-        "@nx/esbuild": "18.3.5",
-        "@nx/eslint": "18.3.5",
-        "@nx/eslint-plugin": "18.3.5",
-        "@nx/jest": "18.3.5",
-        "@nx/js": "18.3.5",
-        "@nx/linter": "18.3.5",
-        "@nx/node": "18.3.5",
-        "@nx/react": "18.3.5",
-        "@nx/rollup": "18.3.5",
-        "@nx/storybook": "18.3.5",
-        "@nx/vite": "18.3.5",
-        "@nx/web": "18.3.5",
-        "@nx/workspace": "18.3.5",
-        "@nxext/stencil": "17.2.2",
+        "@nx/cypress": "19.5.6",
+        "@nx/devkit": "19.5.6",
+        "@nx/esbuild": "19.5.6",
+        "@nx/eslint": "19.5.6",
+        "@nx/eslint-plugin": "19.5.6",
+        "@nx/jest": "19.5.6",
+        "@nx/js": "19.5.6",
+        "@nx/node": "19.5.6",
+        "@nx/react": "19.5.6",
+        "@nx/rollup": "19.5.6",
+        "@nx/storybook": "19.5.6",
+        "@nx/vite": "19.5.6",
+        "@nx/web": "19.5.6",
+        "@nx/workspace": "19.5.6",
+        "@nxext/stencil": "19.0.0",
         "@rollup/plugin-url": "^7.0.0",
         "@schematics/angular": "17.3.8",
         "@stencil/core": "^2.22.2",
@@ -246,7 +244,7 @@
         "monaco-editor": "^0.33.0",
         "ng-mocks": "^14.12.1",
         "npm": "^6.14.16",
-        "nx": "18.3.5",
+        "nx": "19.5.6",
         "postcss": "^8.4.18",
         "postcss-import": "14.1.0",
         "postcss-preset-env": "7.5.0",
