--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -1216,6 +1216,7 @@ dot.template.builder.action.create=Create
 dot.template.builder.add.container=Add Container
 dot.template.builder.add.box=Box
 dot.template.builder.add.row=Row
+dot.template.builder.bringing.back.template.version=Bringing back template version...
 dot.template.builder.edit.classes=Edit Classes
 dot.template.builder.edit.box=Edit Box
 dot.template.builder.label.classes=Classes
