chore: upgrade storybook

--- a/core-web/package.json
+++ b/core-web/package.json
@@ -124,7 +124,7 @@
         "regenerator-runtime": "^0.13.9",
         "rxjs": "~6.6.3",
         "shade-generator": "^1.2.7",
-        "storybook": "^7.6.3",
+        "storybook": "7.6.20",
         "superstruct": "^1.0.3",
         "terser": "^5.28.1",
         "test": "^0.6.0",
@@ -168,14 +168,14 @@
         "@schematics/angular": "17.3.8",
         "@stencil/core": "^2.22.2",
         "@stencil/sass": "^2.0.3",
-        "@storybook/addon-actions": "^7.6.3",
-        "@storybook/addon-docs": "^7.6.3",
-        "@storybook/addon-essentials": "^7.6.3",
-        "@storybook/angular": "^7.6.3",
-        "@storybook/blocks": "^7.6.3",
-        "@storybook/manager-api": "^7.6.3",
-        "@storybook/preview-api": "^7.6.3",
-        "@storybook/theming": "^7.6.3",
+        "@storybook/addon-actions": "7.6.20",
+        "@storybook/addon-docs": "7.6.20",
+        "@storybook/addon-essentials": "7.6.20",
+        "@storybook/angular": "7.6.20",
+        "@storybook/blocks": "7.6.20",
+        "@storybook/manager-api": "7.6.20",
+        "@storybook/preview-api": "7.6.20",
+        "@storybook/theming": "7.6.20",
         "@svgr/rollup": "^6.1.2",
         "@testing-library/jest-dom": "^6.1.6",
         "@testing-library/react": "^14.0.0",
