--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -189,6 +189,8 @@ anonymous=Anonymous
 another-layout-already-exists=Another Tool Group already exists in the system with the same name
 Any-Structure-Type=Any Content Type
 Any-Structure=Any Content Type
+ai.unsupported.models=The following models are not supported: [{0}]
+ai.models.exhausted=All the {0} models: [{1}] have been exhausted since they are invalid or has been decommissioned
 api.ruleengine.system.conditionlet.CurrentSessionLanguage.inputs.comparison.placeholder=Comparison
 api.ruleengine.system.conditionlet.CurrentSessionLanguage.inputs.language.placeholder=Language
 api.ruleengine.system.conditionlet.CurrentSessionLanguage.name=Selected Language
