--- a/.github/workflows/sbom_generator.yaml
+++ b/.github/workflows/sbom_generator.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout core-test-results repository
         uses: actions/checkout@v3
         with:
-          repository: dotCMS/core-test-results
+          repository: sbom/core-test-results
           token: ${{ secrets.GITHUB_TOKEN }}
           path: core-test-results
 
