--- a/dotcms-postman/config.json
+++ b/dotcms-postman/config.json
@@ -1,5 +1,9 @@
 [
     {
+        "name": "ai",
+        "collections": ["AI.postman_collection"]
+    },
+    {
         "name": "category-content",
         "collections": [
             "Category.postman_collection",
