chore: upgrade storybook

--- a/core-web/package.json
+++ b/core-web/package.json
@@ -72,7 +72,6 @@
         "@ngrx/operators": "^17.2.0",
         "@ngrx/signals": "^17.2.0",
         "@nx/angular": "19.5.6",
-        "@storybook/builder-webpack5": "8.2.8",
         "@tarekraafat/autocomplete.js": "^10.2.6",
         "@tinymce/tinymce-angular": "^7.0.0",
         "@tiptap/core": "^2.0.0-beta.218",
@@ -176,6 +175,9 @@
         "@storybook/manager-api": "8.2.8",
         "@storybook/preview-api": "8.2.8",
         "@storybook/theming": "8.2.8",
+        "@storybook/builder-webpack5": "8.2.8",
+        "@storybook/channels": "8.2.8",
+        "@storybook/core-events": "8.2.8",
         "@svgr/rollup": "^6.1.2",
         "@testing-library/jest-dom": "^6.1.6",
         "@testing-library/react": "^14.0.0",
