--- a/core-web/package.json
+++ b/core-web/package.json
@@ -144,6 +144,7 @@
         "@babel/core": "^7.12.9",
         "@babel/preset-react": "^7.14.5",
         "@compodoc/compodoc": "^1.1.24",
+        "@faker-js/faker": "^8.4.1",
         "@materia-ui/ngx-monaco-editor": "^6.0.0",
         "@mdx-js/react": "^2.1.2",
         "@ngneat/spectator": "^19.0.0",
@@ -166,18 +167,17 @@
         "@schematics/angular": "17.3.8",
         "@stencil/core": "^2.22.2",
         "@stencil/sass": "^2.0.3",
-        "storybook": "8.2.8",
         "@storybook/addon-actions": "8.2.8",
         "@storybook/addon-docs": "8.2.8",
         "@storybook/addon-essentials": "8.2.8",
         "@storybook/angular": "8.2.8",
         "@storybook/blocks": "8.2.8",
-        "@storybook/manager-api": "8.2.8",
-        "@storybook/preview-api": "8.2.8",
-        "@storybook/theming": "8.2.8",
         "@storybook/builder-webpack5": "8.2.8",
         "@storybook/channels": "8.2.8",
         "@storybook/core-events": "8.2.8",
+        "@storybook/manager-api": "8.2.8",
+        "@storybook/preview-api": "8.2.8",
+        "@storybook/theming": "8.2.8",
         "@svgr/rollup": "^6.1.2",
         "@testing-library/jest-dom": "^6.1.6",
         "@testing-library/react": "^14.0.0",
@@ -256,6 +256,7 @@
         "puppeteer": "~5.3.1",
         "react-test-renderer": "^18.2.0",
         "sass": "^1.56.2",
+        "storybook": "8.2.8",
         "ts-jest": "29.1.1",
         "ts-node": "10.9.1",
         "tslint": "~6.1.3",
