--- a/core-web/package.json
+++ b/core-web/package.json
@@ -72,7 +72,6 @@
         "@ngrx/operators": "^17.2.0",
         "@ngrx/signals": "^17.2.0",
         "@nx/angular": "19.5.6",
-        "@storybook/builder-webpack5": "^8.1.1",
         "@tarekraafat/autocomplete.js": "^10.2.6",
         "@tinymce/tinymce-angular": "^7.0.0",
         "@tiptap/core": "^2.0.0-beta.218",
@@ -124,7 +123,6 @@
         "regenerator-runtime": "^0.13.9",
         "rxjs": "~6.6.3",
         "shade-generator": "^1.2.7",
-        "storybook": "^7.6.3",
         "superstruct": "^1.0.3",
         "terser": "^5.28.1",
         "test": "^0.6.0",
@@ -146,6 +144,7 @@
         "@babel/core": "^7.12.9",
         "@babel/preset-react": "^7.14.5",
         "@compodoc/compodoc": "^1.1.24",
+        "@faker-js/faker": "8.4.1",
         "@materia-ui/ngx-monaco-editor": "^6.0.0",
         "@mdx-js/react": "^2.1.2",
         "@ngneat/spectator": "^19.0.0",
@@ -168,14 +167,16 @@
         "@schematics/angular": "17.3.8",
         "@stencil/core": "^2.22.2",
         "@stencil/sass": "^2.0.3",
-        "@storybook/addon-actions": "^7.6.3",
-        "@storybook/addon-docs": "^7.6.3",
-        "@storybook/addon-essentials": "^7.6.3",
-        "@storybook/angular": "^7.6.3",
-        "@storybook/blocks": "^7.6.3",
-        "@storybook/manager-api": "^7.6.3",
-        "@storybook/preview-api": "^7.6.3",
-        "@storybook/theming": "^7.6.3",
+        "@storybook/addon-actions": "8.2.8",
+        "@storybook/addon-docs": "8.2.8",
+        "@storybook/addon-essentials": "8.2.8",
+        "@storybook/angular": "8.2.8",
+        "@storybook/blocks": "8.2.8",
+        "@storybook/channels": "8.2.8",
+        "@storybook/core-events": "8.2.8",
+        "@storybook/manager-api": "8.2.8",
+        "@storybook/preview-api": "8.2.8",
+        "@storybook/theming": "8.2.8",
         "@svgr/rollup": "^6.1.2",
         "@testing-library/jest-dom": "^6.1.6",
         "@testing-library/react": "^14.0.0",
@@ -210,7 +211,7 @@
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-react": "7.34.2",
         "eslint-plugin-react-hooks": "4.6.2",
-        "eslint-plugin-storybook": "^0.8.0",
+        "eslint-plugin-storybook": "0.8.0",
         "fake-indexeddb": "^5.0.2",
         "fetch-mock": "^9.11.0",
         "flatpickr": "^4.5.7",
@@ -254,6 +255,7 @@
         "puppeteer": "~5.3.1",
         "react-test-renderer": "^18.2.0",
         "sass": "^1.56.2",
+        "storybook": "8.2.8",
         "ts-jest": "29.1.1",
         "ts-node": "10.9.1",
         "tslint": "~6.1.3",
