more docker compose updates

--- a/core-web/package.json
+++ b/core-web/package.json
@@ -23,7 +23,7 @@
         "build:prod": "nx run dotcms-ui:build:production",
         "build:dotcms-block-editor": "ng build dotcms-block-editor --configuration production --optimization --output-hashing=none && cat dist/apps/dotcms-block-editor/{generator-runtime,runtime,polyfills,main}.js > ../dotCMS/src/main/webapp/html/dotcms-block-editor.js",
         "build:dotcms-webcomponents": "nx build dotcms-webcomponents",
-        "docker:test": "npm run docker:build;IMAGE_BASE_NAME=core-web docker-compose -f docker-compose-running-test.yml up",
+        "docker:test": "npm run docker:build;IMAGE_BASE_NAME=core-web docker compose -f docker-compose-running-test.yml up",
         "docker:build": "docker build -t core-web .",
         "analyze": "ng build --stats-json;webpack-bundle-analyzer dist/stats.json",
         "docs:json": "compodoc -p ./tsconfig.base.json -e json -d .",
