--- a/.github/workflows/legacy-release_sbom-generator.yaml
+++ b/.github/workflows/legacy-release_sbom-generator.yaml
@@ -1,4 +1,7 @@
-# Generate SBOM for latest version of dotCMS and put into core-test-repo
+# Generate SBOM for latest version of dotCMS and put into core repo
+
+name: Generate SBOM for dotCMS Releases
+
 on:
   release:
     types: [published]
@@ -13,61 +16,77 @@ jobs:
   scan:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Ensure write access to contents
+      contents: read
 
     steps:
-      - name: Checkout core-test-results repository
+      - name: Checkout core repository
         uses: actions/checkout@v3
         with:
-          repository: dotCMS/core-test-results
+          repository: dotCMS/core
           token: ${{ secrets.GITHUB_TOKEN }}
-          path: core-test-results
+          path: core
 
       - name: Get dotCMS release version
         id: get_version
         run: |
           if [ "${{ github.event_name }}" == "release" ]; then
-            # Extract the tag name from the release event context
             latest_tag=${{ github.event.release.tag_name }}
           else
-            # Use the input provided in manual run
             latest_tag=${{ github.event.inputs.dotcms_version }}
           fi
-
-          # Format the tag name if necessary
           formatted_tag=$(echo "$latest_tag" | sed -e 's/^dotcms-cli-//' -e 's/^v//')
-
-          echo "Latest tag: $formatted_tag"
           echo "DOTCMS_VERSION=$formatted_tag" >> $GITHUB_ENV
 
-      - name: Pull and run dotCMS Docker image
+      - name: Setup Python environment
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+          cache: 'pip'
+
+      - name: Install pipx and Syft
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipx
+          pipx install anchore-syft
+
+      - name: Pull dotCMS Docker image
         run: |
           docker pull dotcms/dotcms:${{ env.DOTCMS_VERSION }}
-          docker run -d -p 8082:8082 dotcms/dotcms:${{ env.DOTCMS_VERSION }}
 
-      - name: Install pipx
+      - name: Generate SBOM using Syft
         run: |
-          pip install pipx
+          mkdir -p core/sbom
+          pipx run syft dotcms/dotcms:${{ env.DOTCMS_VERSION }} -o cyclonedx-xml > core/sbom/dotcms-${{ env.DOTCMS_VERSION }}.json
 
-      - name: Scan Docker Image with Syft
-        run: |
-          pipx run anchore_syft dotcms/dotcms:${{ env.DOTCMS_VERSION }} -o cyclonedx-xml > core-test-results/sbom/cyclonedx.json
+  commit:
+    runs-on: ubuntu-latest
+    needs: scan
+    permissions:
+      contents: write
 
-      - name: Rename SBOM file with dotCMS version
+    steps:
+      - name: Checkout core repository
+        uses: actions/checkout@v3
+        with:
+          repository: dotCMS/core
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: core
+
+      - name: Create sbom folder if not exists
         run: |
-          mkdir -p core-test-results/sbom
-          mv core-test-results/sbom/cyclonedx.json core-test-results/sbom/dotcms-${{ env.DOTCMS_VERSION }}.json
+          mkdir -p core/sbom
 
       - name: Configure Git
         run: |
           git config --global user.email "action@github.com"
-          git config --global user.name "Github Actions"
+          git config --global user.name "GitHub Actions"
 
-      - name: Commit and push results to core-test-results repository
+      - name: Commit and push SBOM
         run: |
-          cd core-test-results
+          cd core
           git add sbom/dotcms-${{ env.DOTCMS_VERSION }}.json
           git commit -m "Add SBOM for dotCMS version ${{ env.DOTCMS_VERSION }}" || echo "No changes to commit"
           git push origin master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# EoF
