--- a/.github/workflows/legacy-release_sbom-generator.yaml
+++ b/.github/workflows/legacy-release_sbom-generator.yaml
@@ -49,13 +49,16 @@ jobs:
         run: |
           pip install pipx
 
+      - name: Create SBOM folder
+        run: |
+          mkdir -p core/sbom
+          
       - name: Scan Docker Image with Syft
         run: |
           pipx run anchore_syft dotcms/dotcms:${{ env.DOTCMS_VERSION }} -o cyclonedx-xml > core/sbom/cyclonedx.json
 
       - name: Rename SBOM file with dotCMS version
         run: |
-          mkdir -p core/sbom
           mv core/sbom/cyclonedx.json core/sbom/dotcms-${{ env.DOTCMS_VERSION }}.json
 
       - name: Configure Git
