--- a/.github/workflows/maven-cicd-pipeline.yml
+++ b/.github/workflows/maven-cicd-pipeline.yml
@@ -417,9 +417,9 @@ jobs:
         run: |
           echo "date=$(/bin/date -u "+%Y-%m")" >> $GITHUB_OUTPUT
           
-          touch /usr/bin/docker-compose
-          echo 'docker compose --compatibility "$@"' | tee /usr/bin/docker-compose
-          chmod +x /usr/bin/docker-compose
+          sudo touch /usr/bin/docker-compose
+          echo 'docker compose --compatibility "$@"' | sudo tee /usr/bin/docker-compose
+          sudo chmod +x /usr/bin/docker-compose
           
           docker-compose version
 
