--- a/core-web/libs/sdk/client/package.json
+++ b/core-web/libs/sdk/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dotcms/client",
-  "version": "0.0.1-alpha.34-alpha.NaN",
+  "version": "0.0.1-alpha.35",
   "type": "module",
   "description": "Official JavaScript library for interacting with DotCMS REST APIs.",
   "repository": {
