--- a/core-web/libs/sdk/react/package.json
+++ b/core-web/libs/sdk/react/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@dotcms/react",
-  "version": "0.0.1-alpha.34-alpha.NaN",
+  "version": "0.0.1-alpha.35",
   "peerDependencies": {
     "react": ">=18",
     "react-dom": ">=18",
-    "@dotcms/client": "0.0.1-alpha.34-alpha.NaN"
+    "@dotcms/client": "0.0.1-alpha.35"
   },
   "description": "Official React Components library to render a dotCMS page.",
   "repository": {
