--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "@dotcms/client": "0.0.1-alpha.34-alpha.NaN",
-    "@dotcms/angular": "0.0.1-alpha.34-alpha.NaN",
+    "@dotcms/client": "0.0.1-alpha.35",
+    "@dotcms/angular": "0.0.1-alpha.35",
     "@tinymce/tinymce-angular": "^8.0.0"
   },
   "devDependencies": {
