--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dotcms/client": "0.0.1-alpha.34-alpha.NaN",
-    "@dotcms/react": "0.0.1-alpha.34-alpha.NaN",
-    "@dotcms/experiments": "0.0.1-alpha.34-alpha.NaN",
+    "@dotcms/client": "0.0.1-alpha.35",
+    "@dotcms/react": "0.0.1-alpha.35",
+    "@dotcms/experiments": "0.0.1-alpha.35",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18"
