--- a/examples/vuejs/package.json
+++ b/examples/vuejs/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@dotcms/client": "0.0.1-alpha.34-alpha.NaN",
+    "@dotcms/client": "0.0.1-alpha.35",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
