chore(storybook): upgrade in stories

--- a/.gitignore
+++ b/.gitignore
@@ -110,11 +110,10 @@ node_modules/
 
 # Yarn
 /core-web/.yarn/*
-/core-web/.pnp.*
-/core-web/.pnp**
 !/core-web/.yarn/cache
-!/core-web/.yarn/releases
+!/core-web/.yarn/patches
 !/core-web/.yarn/plugins
+!/core-web/.yarn/releases
 !/core-web/.yarn/sdks
 !/core-web/.yarn/versions
 
