--- a/.gitignore
+++ b/.gitignore
@@ -110,10 +110,11 @@ node_modules/
 
 # Yarn
 /core-web/.yarn/*
+/core-web/.pnp.*
+/core-web/.pnp**
 !/core-web/.yarn/cache
-!/core-web/.yarn/patches
-!/core-web/.yarn/plugins
 !/core-web/.yarn/releases
+!/core-web/.yarn/plugins
 !/core-web/.yarn/sdks
 !/core-web/.yarn/versions
 
