--- a/core-web/package.json
+++ b/core-web/package.json
@@ -146,6 +146,7 @@
         "@babel/core": "^7.12.9",
         "@babel/preset-react": "^7.14.5",
         "@compodoc/compodoc": "^1.1.24",
+        "@faker-js/faker": "8.4.1",
         "@materia-ui/ngx-monaco-editor": "^6.0.0",
         "@mdx-js/react": "^2.1.2",
         "@ngneat/spectator": "^19.0.0",
